Update homepage: Add Experience/Education section, move News to bottom

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -40,12 +40,17 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
-    <!-- News -->
-    {% if page.announcements and page.announcements.enabled %}
+    <!-- Experience & Education -->
+    {% if page.homepage_cv %}
+      {% include homepage_cv.liquid %}
+    {% endif %}
+
+    <!-- Selected papers -->
+    {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
       </h2>
-      {% include news.liquid limit=true %}
+      {% include selected_papers.liquid %}
     {% endif %}
 
     <!-- Latest posts -->
@@ -56,12 +61,12 @@ layout: default
       {% include latest_posts.liquid %}
     {% endif %}
 
-    <!-- Selected papers -->
-    {% if page.selected_papers %}
+    <!-- News -->
+    {% if page.announcements and page.announcements.enabled %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
+        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
       </h2>
-      {% include selected_papers.liquid %}
+      {% include news.liquid limit=true %}
     {% endif %}
 
     <!-- Social -->
