--- a/_includes/homepage_cv.liquid
+++ b/_includes/homepage_cv.liquid
@@ -2,8 +2,8 @@
   {% for entry in site.data.cv %}
     {% if entry.title == 'Experience' or entry.title == 'Education' %}
       <a class="anchor" id="{{ entry.title }}"></a>
-      <div class="card mt-3 p-3">
-        <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
+      <div class="mt-3">
+        <h3 class="font-weight-medium">{{ entry.title }}</h3>
         <div>
           {% if entry.type == 'list' %}
             {% include cv/list.liquid %}
